--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -156,7 +156,7 @@
               {% endif %}
                target="_blank"
             >
-              <img src="{{ asset('/img/1361037350_control_play.png') }}" alt="open in playlist" />
+              <img src="{{ asset('/img/1361037350_control_play.png') }}" alt="playlist" />
             </a>
           </li>
         {% endif %}
