--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -104,6 +104,8 @@ $(document).ready(function(){
   string_removefromgroup_sentence = "{{ 'element.group.remove_from.confirm.title'|trans({}, 'elements') }}";
   string_removefromgroup_confirm_yes = "{{ 'element.group.remove_from.confirm.yes'|trans({}, 'elements') }}";
   string_removefromgroup_confirm_no = "{{ 'element.group.remove_from.confirm.no'|trans({}, 'elements') }}";
+  string_element_removefromplaylist_confirm_sentence = "{{ 'playlist.remove_element'|trans({}, 'elements') }}";
+  string_element_deleteplaylist_confirm_sentence = "{{ 'playlist.delete'|trans({}, 'elements') }}";
 
   url_home = "{{ path('home') }}";
   url_search_tag = "{{ path('search_tag') }}";
