--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -268,8 +268,12 @@
         {% endif %}
         
         <li>
-          <a class="add_to_playlist" href="{{ path('playlists_add_element_prompt', { 'element_id' : element.id }) }}">
-            +
+          <a
+            class="add_to_playlist"
+            href="{{ path('playlists_add_element_prompt', { 'element_id' : element.id }) }}"
+            title="{{ 'playlist.add_this_element'|trans({}, 'elements') }}"
+          >
+            <img src="{{ asset('/img/icon_add_2.png') }}" alt="add to playlist" />
           </a>
         </li>
         
