--- a/src/Muzich/CoreBundle/Resources/views/Menu/side_menu.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Menu/side_menu.html.twig
@@ -21,6 +21,11 @@
             {{ 'network.mygroups'|trans({}, 'navigationui') }}
           </a>
         </li>
+        <li class="sub_menu_element">
+          <a href="{{ path('favorites_my_list') }}" >
+            {{ 'container_menu.my_favorites'|trans({}, 'navigationui') }}
+          </a>
+        </li>
       </ul>
     </li>
       
