--- a/src/Muzich/PlaylistBundle/Resources/views/Show/show.html.twig
+++ b/src/Muzich/PlaylistBundle/Resources/views/Show/show.html.twig
@@ -33,10 +33,6 @@
     </div>
     
     <h1>{{ playlist.name }}</h1>
-    <!--
-    <a href="{{ path('playlists_user', { 'user_slug' : playlist.owner.slug }) }}">
-      {{ 'playlist.gotoplaylists'|trans({ '%user_username%' : playlist.owner.username }, 'elements') }}
-    </a>-->
     
     {% include "MuzichCoreBundle:Tag:tag_cloud.html.twig" with {
       'tags' : playlist.tags
@@ -76,7 +72,7 @@
                   {% if playlist.owned(app.user) %}
                     <a 
                       class="remove_element" 
-                      href="{{ path_token('playlist_remove_element', { 'playlist_id' : playlist.id, 'element_id' : element.id }) }}"
+                      href="{{ path_token('playlist_remove_element', { 'playlist_id' : playlist.id, 'index' : loop.index0 }) }}"
                       title="{{ 'playlist.remove_element'|trans({}, 'elements') }}"
                     >
                       <img src="{{ asset('/img/icon_close_2.png') }}" alt="delete" />
@@ -96,9 +92,7 @@
               </div>
               
               <div class="title">
-                <a class="title" href="{{ path('element_get_one', { 'element_id' : element.id }) }}" data-id="{{ element.id }}">
-                  {{ element.name }}
-                </a>
+                {{ element.name }}
               </div>
               
               <div class="content_opened"></div>
