--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
@@ -23,10 +23,18 @@
     
   </div>
 
-  {% include "MuzichCoreBundle:SearchElement:default.html.twig" with{
-      'display_autoplay'     : true,
-      'autoplay_context'     : 'favorite_user'
-  } %}
+  {% if not viewed_user.favoritesPublics and viewed_user.id != app.user|userId %}
+    
+    <p class="solop favorites_no_publics">{{ 'favorites.nopublic'|trans({'%user_username%' : viewed_user.name}, 'network') }}</p>
+    
+  {% else %}
+    
+    {% include "MuzichCoreBundle:SearchElement:default.html.twig" with{
+        'display_autoplay'     : true,
+        'autoplay_context'     : 'favorite_user'
+    } %}
+    
+  {% endif %}
     
   {% if elements|length %}
     {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
