--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -2325,6 +2325,27 @@ p.solop
   margin: 15px;
 }
 
+div.tags_proposition_view
+{
+  padding: 10px;
+  margin: 5px;
+  margin-top: 10px;
+  /*--Les différentes définitions de Box Shadow en CSS3--*/
+  -webkit-box-shadow: 0px 0px 6px #999999;
+  -moz-box-shadow: 0px 0px 6px #999999;
+  box-shadow: 0px 0px 6px #999999;
+  /*--Coins arrondis en CSS3--*/
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+div.tags_proposition_view a.darkbutton
+{
+  margin: 2px;
+  padding: 6px 6px 4px 4px;
+}
+
 /*
 *
 *
