--- a/src/Muzich/UserBundle/Resources/views/Event/elements.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Event/elements.html.twig
@@ -1,5 +1,10 @@
 {% extends "MuzichHomeBundle::layout.html.twig" %}
 
+{% set display_tags_proposition = false %}
+{% if event.type == event_const('TYPE_TAGS_PROPOSED') %}
+  {% set display_tags_proposition = true %}
+{% endif %}
+
 {% block title %}
   {% if event.type == event_const('TYPE_COMMENT_ADDED_ELEMENT') %}
     {{ 'events.view.title.comments'|trans({}, 'userui') }}
@@ -52,7 +57,8 @@
   </div>
 
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {
-    'noelements_filter' : true 
+    'noelements_filter' : true,
+    'display_tags_proposition' : display_tags_proposition
   }%}
     
   {% if elements|length %}
