--- a/src/Muzich/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Security/login.html.twig
@@ -12,6 +12,10 @@
 
   <form action="{{ path("fos_user_security_check") }}" method="post">
     
+    {% if app.request.get('email_confirmation_token') %}
+      <input type="hidden" name="email_confirmation_token" value="{{ app.request.get('email_confirmation_token') }}" />
+    {% endif %}
+    
     <input type="text" id="username" name="_username" value="{{ last_username }}"
       class="niceinput"
       placeholder="{{ 'security.login.username'|trans({}, 'userui') }}"
