Evolution #741: Sticked column

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -8,6 +8,8 @@
   'js/jConfirmAction/jconfirmaction.jquery.js'
   'js/jquery.scrollTo.min.js'
   'js/jquery.aSimpleTour.js'
+  'js/jquery.stickysidebar.js'
+  'js/jquery.sticky.js'
   '@MuzichCoreBundle/Resources/public/js/TagPrompt.js'
   '@MuzichCoreBundle/Resources/public/js/player/*'
   '@MuzichCoreBundle/Resources/public/js/play2.js'
