--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -237,6 +237,33 @@ div#languages:hover
   display: table-cell;
   width: 650px;
   padding-right: 30px;
+  float: left;
+  position: relative;
+}
+
+aside#sidebar
+{
+  display: table-cell;
+/*  vertical-align: top;*/
+  float: left;
+  position: relative;
+}
+
+aside#sidebar .sidebar
+{
+  width: 300px;
+/* height: 800px;
+ background-color: blue;*/
+}
+
+.top-fixed {
+    position: fixed;
+    top: 0;
+}
+
+.bottom-fixed {
+    position:fixed;
+    bottom: 0;
 }
 
 #mainbox
@@ -272,13 +299,6 @@ div#languages:hover
   -moz-box-shadow:    0px 0px 2px rgba(0, 0, 0, 0.3);
   box-shadow:         0px 0px 2px rgba(0, 0, 0, 0.3);
   border: 1px solid #d3d3d3;
-}
-
-aside#sidebar
-{
-  display: table-cell;
-  width: 300px;
-  vertical-align: top;
 }
 
 ul.elements
