--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -1642,7 +1642,7 @@ form.changeemail input[type="text"]
   width: 388px;
 }
 
-form.changeemail input[type="submit"], form.privacy input[type="submit"]
+form.changeemail input[type="submit"], form.privacy input[type="submit"], form.delete input[type="submit"]
 {
   float: right;
   margin-top: 5px;
