Evolution #759: Playlists: public ?

--- a/src/Muzich/PlaylistBundle/Resources/views/Show/prompt.html.twig
+++ b/src/Muzich/PlaylistBundle/Resources/views/Show/prompt.html.twig
@@ -31,6 +31,9 @@
           >
             {{ playlist.name }}
           </a>
+          {% if playlist.public %}
+            {{ 'playlist.public_word'|trans({}, 'elements') }}
+          {% endif %}
         </li>
       {% endfor %}
     </ul>
